--- a/PolicyOptions/PolicyOptions.html
+++ b/PolicyOptions/PolicyOptions.html
@@ -40,7 +40,7 @@
         </div>
         <div style="margin-bottom: 100px;">
             <h1 style="font-size: 50px;text-align: center;">
-                Simulation Model
+                Simulation Model (Effect of Policy Options and their Distribution)
             </h1>
         </div>
       <div style="display: flex; align-items: center;">
