--- a/VocationalTraining/VocationalTraining.html
+++ b/VocationalTraining/VocationalTraining.html
@@ -42,7 +42,7 @@
     </div>
     <div style="margin-bottom: 100px;">
         <h1 style="font-size: 50px;text-align: center;">
-            Simulation Model
+            Simulation Model (Availability of Vocational Training Programs and number of Participants)
         </h1>
     </div>
     <div style="display: flex; align-items: center;">
