--- a/TechnicalTraining/TechnicalTraining.html
+++ b/TechnicalTraining/TechnicalTraining.html
@@ -41,7 +41,7 @@
         </div>
         <div style="margin-bottom: 100px;">
             <h1 style="font-size: 50px;text-align: center;">
-                Simulation Model (Availability of Technical Training Programs and number of Participa)
+                Simulation Model (Availability of Technical Training Programs and number of Participants)
             </h1>
         </div>
         <div style="display: flex; align-items: center;">
