--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="box">
             <h2>Vocational Training</h2>
             <p><span>Our Goal</span><br>What is the relationship between the availability of vocational training programs and the participation rates of individuals seeking skilled trade careers?</p>
-            <a href="https://hamzanaeemm.github.io/VocationalTraining/VocationalTraining.html" target="_blank">Try it Out</a>
+            <a href="./VocationalTraining/VocationalTraining.html" target="_blank">Try it Out</a>
         </div>
         <div class="box">
             <h2>Different Policy Options</h2>
