--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
         <div class="box">
             <h2>Different Policy Options</h2>
             <p><span>Our Goal</span><br>How do the different policy options affect the distribution of skilled labor across different regions in Germany ?</p>
-            <a href="https://hamzanaeemm.github.io/PolicyOptions/PolicyOptions.html" target="_blank">Try it Out</a>
+            <a href="./PolicyOptions/PolicyOptions.html" target="_blank">Try it Out</a>
         </div>
         <div class="box">
             <h2>Technical training Programs</h2>
             <p><span>Our Goal</span><br>How does the implementation of technical training programs by big tech German companies (e.g., Bosch, Siemens, BMW) contribute to the overall supply of skilled labor in the country?</p>
-            <a href="https://hamzanaeemm.github.io/TechnicalTraining/TechnicalTraining.html" target="_blank">Try it Out</a>
+            <a href="./TechnicalTraining/TechnicalTraining.html" target="_blank">Try it Out</a>
         </div>
     </div>
 </body>
